--- a/pyproject.toml
+++ b/pyproject.toml
@@ -7,6 +7,7 @@ authors = ["Your Name <you@example.com>"]
 [tool.poetry.dependencies]
 python = "^3.10"
 requests = "^2.28.1"
+wzlight = "^0.1.33"
 
 [tool.poetry.dev-dependencies]
 pytest = "^5.2"
