--- a/pyproject.toml
+++ b/pyproject.toml
@@ -5,9 +5,13 @@ description = ""
 authors = ["Your Name <you@example.com>"]
 
 [tool.poetry.dependencies]
-python = "^3.10"
+python = ">=3.9,<3.11"
 requests = "^2.28.1"
-wzlight = "^0.1.33"
+pandas-profiling = "^3.3.0"
+wzlight = "^0.1.5"
+aiofiles = "^22.1.0"
+async-lru = "^1.0.3"
+backoff = "^2.1.2"
 
 [tool.poetry.dev-dependencies]
 pytest = "^5.2"
